force-app/main/default/objects/IMPACT_Honors_Award__c/IMPACT_Honors_Award__c.object-meta.xml
<CustomObject>
    <label>IMPACT Honors Award</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>IMPACT Honors Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMPACT Honors Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>