force-app/main/default/objects/IMPACT_Honors_Award__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IMPACT Honors Awards</relationshipLabel>
    <relationshipName>IMPACT_Honors_Awards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>