force-app/main/default/objects/IMPACT_Honors_Award__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <label>Conference</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>IMPACT Honors Awards</relationshipLabel>
    <relationshipName>IMPACT_Honors_Awards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>